--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
   "scripts": {
     "start": "NODE_ENV=development webpack-dev-server --mode development",
     "test": "NODE_ENV=test jest --no-cache",
-    "test:watch": "NODE_ENV=test jest --watch"
+    "test:watch": "NODE_ENV=test jest --watch",
+    "test:updateSnapshot": "NODE_ENV=test jest --no-cache -u"
   },
   "devDependencies": {
     "@babel/core": "^7.12.13",
